# DS-ML

./: pyproject.toml
HW_1/: HW_1.ipynb
HW_10/: Task_10_1.ipynb  Task_10_2.ipynb
HW_11/: Task_11.ipynb
HW_12/: TASK_12.ipynb  Task_12.py
HW_2/: Task_2_1.ipynb  Task_2_2.ipynb  Task_2_3.ipynb  output.csv
HW_3/: Task_3.ipynb
HW_4/: Task_4.ipynb
HW_5/: Task_5.ipynb
HW_6/: Task_6.ipynb
HW_7/: Module_7.ipynb  Task_7.ipynb
HW_8/: Task_8.ipynb
HW_9/: Task_9.ipynb
