[tool.poetry]
name = "ds-ml"
version = "0.1.0"
description = ""
authors = ["Victor <86537032+VAlduinV@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ds_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
