[tool.poetry]
name = "ds-ml"
version = "0.1.0"
description = ""
authors = ["Victor <86537032+VAlduinV@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ds_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
jupyter = "^1.0.0"
pandas = "^2.1.0"
lxml = "^4.9.3"
matplotlib = "^3.7.3"
mplcyberpunk = "^0.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
